# ir_mai

./: CMakeLists.txt  README.md
labs/: CMakeLists.txt
labs/ir_01/: README.md  generate_corpus.py  titles.py  word_count.py
labs/ir_02/: CMakeLists.txt  README.md  evaluation.cpp  main.cpp  requests.txt
labs/ir_03/: CMakeLists.txt  README.md  main.cpp
labs/ir_04/: CMakeLists.txt  README.md  configuration.ini  main.cpp  web_server.cpp
labs/ir_04/templates/: index.html  result.html
labs/ir_04/web_server/: configuration.ini  http_request_handler.h  http_web_server.h  web_server.cpp
labs/ir_04/web_server/handlers/: query_handler.h
labs/ir_08/: CMakeLists.txt  configuration.ini  main.cpp  web_server.cpp
labs/oeat_01/: CMakeLists.txt  README.md  main.cpp
labs/oeat_02/: CMakeLists.txt  README.md  distribution_plot.py  main.cpp
scripts/: ir_01.sh  ir_03.sh  ir_04.sh  ir_08.sh  oeat_01.sh  oeat_02.sh
